--- a/vm/templates/vm/info.html
+++ b/vm/templates/vm/info.html
@@ -5,7 +5,7 @@
 <h3>Basic Status</h3>
 <table class="table table-striped table-bordered">
   <tr>
-    <td>VMname</td>
+    <td>VM Name</td>
     <td>{{vm.name}}</td>
   </tr>
   <tr>
@@ -13,20 +13,18 @@
     <td>{{vm.cpu}}</td>
   </tr>
   <tr>
-    <td>os</td>
+    <td>OS</td>
     <td>{{vm.os}}</td>
   </tr>
   <tr>
-    <td>memorysize</td>
+    <td>Memory Size</td>
     <td>{{vm.memorysize}}</td>
   </tr>
 </table>
 
-
 <!-- TODO show from vm --!>
 <h3>Disk</h3>
-      <div  class="container">
-        <table class="table">
+        <table class="table table-striped table-bordered">
         <thead>
           <tr>
             <th>#</th>
@@ -47,14 +45,10 @@
           </tr>
         </tbody>
       </table>
-      </div>
-
-
 
 <!-- TODO show from vm --!>
 <h3>Network</h3>
-      <div  class="container">
-        <table class="table">
+        <table class="table table-striped table-bordered">
         <thead>
           <tr>
             <th>bridge</th>
@@ -75,7 +69,7 @@
           </tr>
         </tbody>
       </table>
-      </div>
+
 <h3>Statistics</h3>
 <h5>CPU</h5>
       <img src="{% static "statistics/data/cpupng/" %}{{vm.uuid}}.png" class="img-responsive">
