Hide login/logout link when logged out/logged in

--- a/templates/base.html
+++ b/templates/base.html
@@ -32,8 +32,11 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="{% url 'login' %}">login</a></li>
-            <li><a href="{% url 'logout' %}">logout</a></li>
+            {% if request.user.is_authenticated %}
+              <li><a href="{% url 'logout' %}">logout</a></li>
+            {% else %}
+              <li><a href="{% url 'login' %}">login</a></li>
+            {% endif %}
           </ul>
         </div>
       </div>
