--- a/vm/templates/vm/info.html
+++ b/vm/templates/vm/info.html
@@ -12,23 +12,23 @@ span#type1_right {
 <table class="table table-striped table-bordered">
   <tr>
     <td>VM Name</td>
-    <td>{{vm.name}} <a href="{% url 'vm:edit' vm_id=vm.id %}"><span class="glyphicon glyphicon-edit" aria-hidden="true" id="type1_right" ></span></a></td>
+    <td>{{vm.name}} <a href="{% url 'vm:hostname_edit' vm_id=vm.id %}"><span class="glyphicon glyphicon-edit" aria-hidden="true" id="type1_right" ></span></a></td>
   </tr>
   <tr>
     <td>CPU</td>
-    <td>{{vm.cpu}} <a href="{% url 'vm:edit' vm_id=vm.id %}"><span class="glyphicon glyphicon-edit" aria-hidden="true" id="type1_right" ></span></a></td>
+    <td>{{vm.cpu}} <a href="{% url 'vm:cpu_edit' vm_id=vm.id %}"><span class="glyphicon glyphicon-edit" aria-hidden="true" id="type1_right" ></span></a></td>
   </tr>
   <tr>
     <td>cd image</td>
-    <td>{{vm.os}} <a href="{% url 'vm:edit' vm_id=vm.id %}"><span class="glyphicon glyphicon-edit" aria-hidden="true" id="type1_right" ></span></a></td>
+    <td>{{vm.os}} <a href="{% url 'vm:cd_image_edit' vm_id=vm.id %}"><span class="glyphicon glyphicon-edit" aria-hidden="true" id="type1_right" ></span></a></td>
   </tr>
   <tr>
     <td>boot device</td>
-    <td>{{vm.os}} <a href="{% url 'vm:edit' vm_id=vm.id %}"><span class="glyphicon glyphicon-edit" aria-hidden="true" id="type1_right" ></span></a></td>
+    <td>{{vm.os}} <a href="{% url 'vm:bootdev_edit' vm_id=vm.id %}"><span class="glyphicon glyphicon-edit" aria-hidden="true" id="type1_right" ></span></a></td>
   </tr>
   <tr>
     <td>Memory Size</td>
-    <td>{{vm.memorysize}} <a href="{% url 'vm:edit' vm_id=vm.id %}"><span class="glyphicon glyphicon-edit" aria-hidden="true" id="type1_right" ></span></a></td>
+    <td>{{vm.memorysize}} <a href="{% url 'vm:memorysize_edit' vm_id=vm.id  %}"><span class="glyphicon glyphicon-edit" aria-hidden="true" id="type1_right" ></span></a></td>
   </tr>
   <tr>
     <td>State</td>
@@ -37,7 +37,7 @@ span#type1_right {
 </table>
 
 <!-- TODO show from vm -->
-<h3>Disk  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>  </h3>
+<h3>Disk  <a href="{% url 'vm:attach_disk' vm_id=vm.id  %}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></a></h3>
         <table class="table table-striped table-bordered">
         <thead>
           <tr>
