--- a/vm/templates/vm/info.html
+++ b/vm/templates/vm/info.html
@@ -55,22 +55,21 @@
         <table class="table table-striped table-bordered">
         <thead>
           <tr>
-            <th>bridge</th>
-            <th>mac</th>
-            <th>status</th>
+            <th>interfaces</th>
+            <th>source</th>
+            <th>mac address</th>
+            <th>type</th>
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td>br0</td>
-            <td>11:22:33:44:da:sd</td>
-            <td>bridge</td>
-          </tr>
-          <tr>
-            <td>br0</td>
-            <td>11:22:33:44:da:sd</td>
-            <td>NAT</td>
-          </tr>
+          {% for interface in vm.interfaces%}
+            <tr>
+              <td>{{ forloop.counter }}</td>
+              <td>{{ interface.source }}</td>
+              <td>{{ interface.mac }}</td>
+              <td>{{ interface.type }}</td>
+            </tr>
+          {% endfor %}
         </tbody>
       </table>
 
